# schemas

./: .gitignore  pyproject.toml  setup.py
qtech_schemas/: __init__.py  _yield.py  bvrd.py  dbo.py  drix.py  fx.py  market.py  simbad.py
src/: alembic.ini
src/alembic/: env.py
src/alembic/versions/: 120bf7db0da0_drix_schema_fixed.py  17358a2f6ddc_.py  c89aefd5c6ed_.py
src/qtech_schemas/: __init__.py  _yield.py  bvrd.py  dbo.py  drix.py  fx.py  market.py  simbad.py
