[project]
name = "qtech_schemas"
version = "2.12.2"
description = "Libreria ORM para la arquitectura de base de datos"
readme = "README.md"
authors = [
  {name = "Ian Contreras", email = "ic@quantech.com.do"},
  {name = "Jose M.", email = "jdm@quantech.com.do"},
]

requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "pyodbc>=5.2.0",
    "sqlalchemy>=2.0.36",
]

[project.scripts]
qtech-schemas = "qtech_schemas:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["src"]
include = ["qtech_schemas*"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[dependency-groups]
dev = [
    "alembic>=1.14.0",
    "python-dotenv>=1.0.1",
]
